# Arduino-Emulator

./: .gitignore  01-Setup.ipynb  02-BasicCommands-Copy1.ipynb  02-BasicCommands.ipynb  03-Network.ipynb  06-TinyFTP.ipynb  Arduino.cmake  ArduinoLibrary.cmake  CMakeLists.txt  Doxyfile  README.md  Readme.ipynb  Readme.md  _arduino_8h_source.html  _arduino_a_p_i_8h_source.html  _arduino_core-_linux_2cores_2arduino_2_udp_8h_source.html  _arduino_core-_linux_2cores_2arduino_2pgmspace_8h_source.html  _arduino_logger_8h_source.html  _binary_8h_source.html  _can_msg_ringbuffer_8h_source.html  _ethernet_8h_source.html  _ethernet_server_8h_source.html  _ethernet_u_d_p_8h_source.html  _ethernet_udp_8h_source.html  _file_stream_8h_source.html  _g_p_i_o_wrapper_8h_source.html  _hardware_g_p_i_o_8h_source.html  _hardware_g_p_i_o___f_i_r_8h_source.html  _hardware_g_p_i_o___f_t_d_i_8h_source.html  _hardware_g_p_i_o___r_p_i_8h_source.html  _hardware_i2_c___f_t_d_i_8h_source.html  _hardware_i2_c___r_p_i_8h_source.html  _hardware_s_p_i_8h_source.html  _hardware_s_p_i___f_t_d_i_8h_source.html  _hardware_s_p_i___r_p_i_8h_source.html  _hardware_service_8h_source.html  _hardware_setup_8h_source.html  _hardware_setup_f_t_d_i_8h_source.html  _hardware_setup_r_p_i_8h_source.html  _hardware_setup_remote_8h_source.html  (+212 more)
.github/workflows/: c-cpp-cmake.yml  doxygen-gh-pages.yml  unit-tests.yml
.ipynb_checkpoints/: 01-Setup-checkpoint.ipynb  02-BasicCommands-checkpoint.ipynb  03-Network-checkpoint.ipynb  04-Pins-checkpoint.ipynb  CMakeLists-checkpoint.txt  Readme-checkpoint.ipynb  Readme-checkpoint.md  build-checkpoint.sh
ArduinoCore-API/: README.md
ArduinoCore-API/api/: ArduinoAPI.h  Common.cpp  Common.h  Compat.h  HardwareSPI.h  IPAddress.cpp  IPAddress.h  Print.h  Stream.cpp  Stream.h  String.cpp  USBAPI.h  WString.h
ArduinoCore-API/test/: .gitignore  CMakeLists.txt
ArduinoCore-API/test/include/: MillisFake.h  PrintMock.h  PrintableMock.h  StreamMock.h
ArduinoCore-API/test/src/: MillisFake.cpp  PrintMock.cpp  StreamMock.cpp  dtostrf.cpp  itoa.cpp
ArduinoCore-Linux/cores/arduino/: ArdFileStream.h  ArdStdio.h  Arduino.cpp  Arduino.h  ArduinoLogger.h  Ethernet.h  EthernetServer.h  EthernetUDP.cpp  EthernetUDP.h  EthernetUdp.h  FileStream.h  GPIOWrapper.cpp  GPIOWrapper.h  Hardware.h  HardwareGPIO.cpp  HardwareGPIO.h  HardwareGPIO_RPI.cpp  HardwareGPIO_RPI.h  HardwareI2C.cpp  HardwareI2CEx.cpp  HardwareI2CEx.h  HardwareI2C_RPI.cpp  HardwareI2C_RPI.h  HardwareSPI.cpp  HardwareSPI_RPI.cpp  HardwareSPI_RPI.h  HardwareService.h  HardwareSetup.h  HardwareSetupRemote.h  I2CWrapper.cpp  I2CWrapper.h  MD5Builder.cpp  MD5Builder.h  Main.cpp  NetworkClientSecure.h  (+36 more)
ArduinoCore-Linux/libraries/: README.md  SD.h  SPI.h  SdFat.h  Servo.h
docs/html/: _ard_file_stream_8h_source.html  _ard_stdio_8h_source.html  _arduino_8h_source.html  _arduino_a_p_i_8h_source.html  _arduino_core-_a_p_i_2api_2_udp_8h_source.html  _arduino_core-_a_p_i_2api_2deprecated-avr-comp_2avr_2pgmspace_8h_source.html  _arduino_core-_a_p_i_2api_2deprecated_2_udp_8h_source.html  _arduino_core-_linux_2cores_2arduino_2_udp_8h_source.html  _arduino_core-_linux_2cores_2arduino_2pgmspace_8h_source.html  _arduino_logger_8h_source.html  _binary_8h_source.html  _can_msg_8h_source.html  _can_msg_ringbuffer_8h_source.html  _client_8h_source.html  _common_8h_source.html  _compat_8h_source.html  _d_m_a_pool_8h_source.html  _ethernet_8h_source.html  _ethernet_server_8h_source.html  _ethernet_u_d_p_8h_source.html  _file_stream_8h_source.html  _g_p_i_o_wrapper_8h_source.html  _hardware_8h_source.html  _hardware_c_a_n_8h_source.html  _hardware_g_p_i_o_8h_source.html  _hardware_g_p_i_o___f_t_d_i_8h_source.html  _hardware_g_p_i_o___r_p_i_8h_source.html  _hardware_i2_c_8h_source.html  _hardware_i2_c___f_t_d_i_8h_source.html  _hardware_i2_c___r_p_i_8h_source.html  _hardware_i2_c_ex_8h_source.html  _hardware_s_p_i_8h_source.html  _hardware_s_p_i___f_t_d_i_8h_source.html  _hardware_s_p_i___r_p_i_8h_source.html  _hardware_serial_8h_source.html  _hardware_service_8h_source.html  _hardware_setup_8h_source.html  _hardware_setup_f_t_d_i_8h_source.html  _hardware_setup_r_p_i_8h_source.html  _hardware_setup_remote_8h_source.html  (+923 more)
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt  blink.ino
examples/bme280-i2c/: CMakeLists.txt  bme280-i2c.ino
examples/bme280-spi/: CMakeLists.txt  bme280-spi.ino
examples/hallo-world/: CMakeLists.txt  hallo-world.cpp  hallo-world.ino
examples/i2c/: CMakeLists.txt  i2c.ino
examples/jupyter/: 01-Setup.ipynb  03-Network.ipynb  04-Pins.ipynb  05-Serial.ipynb
examples/network-connect-timing/: CMakeLists.txt  network-connect-timing.ino
examples/pwm/: CMakeLists.txt  pwm.ino
examples/raspberry-pi/: CMakeLists.txt
examples/raspberry-pi/blink/: CMakeLists.txt
examples/raspberry-pi/i2c/: CMakeLists.txt  i2c.ino
examples/raspberry-pi/serial2/: CMakeLists.txt
examples/raspberry-pi/spi/: CMakeLists.txt  spi.ino
examples/raspberry_pi/blink/: CMakeLists.txt  blink.ino
examples/rasperry_pi/: CMakeLists.txt
examples/rasperry_pi/blink/: CMakeLists.txt  blink.cpp  blink.ino
examples/remote-api/: CMakeLists.txt
examples/remote-api/blink/: CMakeLists.txt  blink.ino
examples/remote-api/i2c/: CMakeLists.txt  i2c.ino
examples/remote-api/spi/: CMakeLists.txt  spi.ino
examples/serial2/: CMakeLists.txt  serial2.ino
examples/spi/: CMakeLists.txt  spi.ino
examples/using-arduino-library/: CMakeLists.txt  using-arduino-library.ino
examples/wifi-secure/: CMakeLists.txt  wifi-secure.cpp  wifi-secure.ino
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  enums_1.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+16 more)
(+214 files in other folders)
